<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TaskDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TaskDetails">

    <TextView
        android:id="@+id/TaskDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="608dp"
        android:padding="10dp"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_vivamus_porta_tortor_ac_tincidunt_pulvinar_massa_odio_rutrum_ante_non_laoreet_diam_magna_eget_neque_in_ut_ante_id_tellus_aliquam_elementum_eu_non_risus"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp" />

    <Button
        android:id="@+id/deleteTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="520dp"
        android:backgroundTint="@color/red"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskDescription"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/TaskState"
        android:textSize="24sp"
        android:textColor="#3876BF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_state"
        app:layout_constraintBottom_toTopOf="@+id/TaskDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

</androidx.constraintlayout.widget.ConstraintLayout>