<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="8dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/titleBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Title"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" />

        <EditText
            android:id="@+id/titleEditBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" />

        <EditText
            android:id="@+id/descriptionEditBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" />

        <Spinner
            android:id="@+id/bottomSheetSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#DA1818"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:layout_margin="4dp"
                android:padding="8dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/saveBtnBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#044F9E"
                android:text="@string/save"
                android:textColor="@color/white"
                android:layout_margin="4dp"
                android:padding="8dp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
